# rl-demo

./: .gitignore  AGENTS.md  README.md  context.md  main.py  pyproject.toml
.issues/: solution.md
.issues/achieved/: Add-TUI-support-with-episode-number-switching-and-optimized-navigation.md  Add-command-line-argument-for-specifying-training-data-export-location.md  Add-support-for-plotting-loss-and-reward-curves-in-pop-up-windows.md  Add-π-policy-distribution-printing-feature.md  Agent-Initial-Position-Inconsistency.md  Change-return-type-from-List[int]-to-Tuple[int,-int].md  DQN-Maze-Failure-Due-to-Partial-Observability,-Not-Algorithm.md  Fix-reward-reset-issue-by-saving-and-restoring-initial-environment-state.md  Issue-1769937650743.md
.issues/doing/: Add-π-policy-distribution-printing-feature.2.md
.issues/stash/: Add-TUI-support-with-episode-number-switching-and-optimized-navigation.7.md  Add-command-line-argument-for-specifying-training-data-export-location.3.md  Add-support-for-plotting-loss-and-reward-curves-in-pop-up-windows.6.md  Add-π-policy-distribution-printing-feature.2.md  Agent-Initial-Position-Inconsistency.1.md  Change-return-type-from-List[int]-to-Tuple[int,-int].4.md  DQN-Maze-Failure-Due-to-Partial-Observability,-Not-Algorithm.9.md  Fix-reward-reset-issue-by-saving-and-restoring-initial-environment-state.0.md  Issue-1769937650743.9.md  Support-Export-and-Rendering-of-Q-Table-or-Color-Distribution.8.md  (+1 more)
rlf/: __init__.py  data_export.py  schemas.py  trainer.py  tui.py
snippets/: 1.md  rl.py
tmp/: a.py  float_tui.py  prob.py  scratch.md
(+13 files in other folders)
