[project]
name = "rl-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "numpy>=2.4.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "rich>=14.2.0",
    "textual>=0.88.1",
    "torch>=2.9.1",
    "typer>=0.21.1",
]


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
